Updated to CLAID 0.6.4.

--- a/app/src/main/assets/claid_config.json
+++ b/app/src/main/assets/claid_config.json
@@ -1,12 +1,8 @@
 {
   "hosts": [
     {
-      "hostname": "smartwatch",
-      "type": "android",
-      "isServer": false,
-      "min_log_severity_level": "WARNING",
+      "hostname": "Smartwatch",
       "modules": [
-
 
       ]
     }
