--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'androidx.wear:wear:1.3.0'
 
-    implementation 'ch.claid:claid:0.6.3'
+    implementation 'ch.claid:claid:0.6.4'
     implementation 'androidx.work:work-runtime:2.9.0'
+    implementation 'claid_developers.ch.claid:galaxy_watch_package:+'
 }
